<resources>
    <string name="app_name">Moger</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logout">Logout</string>
    <string name="postNewStory">Post New Story</string>
    <string name="storyDescription">Story Description</string>
    <string name="post">POST</string>
    <string name="contentLoading">Loading Content</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="dontHaveAnyAccount">Don"'"t have any account"?"</string>
    <string name="signUp">Sign Up</string>
    <string name="welcome">Hello, Welcome!</string>
    <string name="name">Name</string>
    <string name="register">Register</string>
    <string name="helloNewUser">Hello, New User!</string>
    <string name="chooseAPicture">Choose a picture</string>
    <string name="notGranted">Permission is not granted</string>
    <string name="pleaseSelectImage">Please select image first</string>
    <string name="emailRequired">Email must be filled</string>
    <string name="passRequired">Password must be filled</string>
    <string name="nameRequired">Please fill the empty name column</string>
    <string name="passRule">Password must be at least 8 characters</string>
    <string name="userCreated">User registered successfully</string>
    <string name="wantLogoutQuestion">Are you sure want to logout from this account?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="searchgroup">Search Group Name</string>
    <string name="leave">Leave</string>
    <string name="enter">Enter</string>
    <string name="profile">Profile</string>
    <string name="grouplist">Group List</string>
    <string name="selectedMonth">%1$s, %2$s</string>
    <string name="income">Income</string>
    <string name="outcome">Outcome</string>
    <string name="moneyValue">Rp.%1$s</string>
    <string name="day">Day %1$s</string>

    <string name="kind">Kind</string>
    <string name="from">From</string>
    <string name="category">Category</string>
    <string name="amount">Amount</string>
    <string name="createdBy">Created By</string>
    <string name="typeanemail">Type an Email</string>
    <string name="addmember">Add Member</string>
    <string name="transfer">Transfer</string>
    <string name="selectedKind">Transaction Kind: %1$s"</string>

    <string name="input_date">Date (YYYY-MM-DD)</string>
    <string name="wallet">Wallet</string>
    <string name="add">Add</string>
    <string name="walletname">Wallet Name</string>
    <string name="balance">Balance</string>
    <string name="addwallet">Add Wallet</string>
    <string name="total">Total</string>
    <string name="groupname">Group Name</string>
    <string name="creategroup">Create Group</string>
    <string name="retrieveFail">Data Retrieve Failed</string>
    <string name="walletadded">Wallet Added Successfully</string>
    <string name="walletaddFailed">Failed to Add Wallet</string>
    
    <string name="transactionadded">Transaction Added Successfully</string>
    <string name="transactionFailed">Failed to Add Transaction</string>

    <string name="memberadded">Member added Successfully</string>
    <string name="memberaddFaied">Failed to Add Member</string>
    <string name="formatDate">%1$s 00:00:01</string>

    <string name="groupAdded">Group Created Sucessfully</string>
    <string name="groupAddFailed">Failed to create Group</string>

    <string name="barTransaction">%1$s - Transaction</string>
    <string name="barAddTransaction">%1$s - Add Transaction</string>
    <string name="barWalletManagement">%1$s - Wallet Management</string>
    <string name="barMemberManagement">%1$s - Member Management</string>
    <string name="barCreateNewGroup">Create New Group</string>
</resources>