<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/discord_darkgrey"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".screen.addTransaction.AddTransactionActivity">

    <LinearLayout
        android:id="@+id/linearLayout5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <Button
            android:id="@+id/btn_kind_income"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginRight="20dp"
            android:backgroundTint="@color/discord_blue"
            android:text="@string/income"
            android:textSize="10sp"
            app:cornerRadius="16dp"

            />

        <Button
            android:id="@+id/btn_kind_outcome"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:backgroundTint="@color/discord_blue"
            android:text="@string/outcome"
            android:textSize="10sp"
            app:cornerRadius="16dp"

            />

        <Button
            android:id="@+id/btn_kind_transfer"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:layout_marginLeft="20dp"
            android:backgroundTint="@color/discord_blue"
            android:text="@string/transfer"
            android:textSize="10sp"
            app:cornerRadius="16dp"

            />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_selected_kind"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectedKind"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout5" />

    <EditText
        android:id="@+id/et_date_transaction"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="10dp"
        android:background="@drawable/search_bg"

        android:ems="10"
        android:hint="@string/input_date"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingLeft="8dp"

        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_selected_kind" />

    <EditText
        android:id="@+id/et_wallet_transaction"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_bg"
        android:ems="10"

        android:hint="@string/wallet"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_date_transaction" />

    <EditText
        android:id="@+id/et_category_to_wallet_transaction"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_bg"
        android:ems="10"

        android:hint="@string/category"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_wallet_transaction" />

    <EditText
        android:id="@+id/et_amount_transaction"
        android:layout_width="250dp"
        android:layout_height="30dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/search_bg"

        android:ems="10"
        android:hint="@string/amount"
        android:inputType="text"
        android:paddingHorizontal="15dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_category_to_wallet_transaction" />

    <Button
        android:id="@+id/btn_add_transaction"
        android:layout_width="90dp"
        android:layout_height="45dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/discord_blue"
        android:text="@string/add"
        android:textSize="10sp"
        app:cornerRadius="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_amount_transaction" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wallet_addtransaction"
        android:layout_width="match_parent"
        android:layout_height="345dp"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_add_transaction" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/baseline_insert_photo_24" />

    <ProgressBar
        android:id="@+id/progressBar5"
        style="?android:attr/progressBarStyle"
        android:layout_width="63dp"
        android:layout_height="49dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/linearLayout5" />
</androidx.constraintlayout.widget.ConstraintLayout>