<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/discord_blue"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_kind"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="@drawable/linear_bg_white"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="start|center_vertical"
            android:paddingVertical="2dp"

            android:paddingStart="4dp"
            android:text="@string/kind"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_from"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="@drawable/linear_bg_white"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="start|center_vertical"
            android:paddingVertical="2dp"

            android:paddingStart="4dp"
            android:text="@string/from"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="@drawable/linear_bg_white"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="start|center_vertical"
            android:paddingVertical="2dp"

            android:paddingStart="4dp"
            android:text="@string/category"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_created_by"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.35"
            android:background="@drawable/linear_bg_white"
            android:fontFamily="sans-serif-condensed-light"
            android:gravity="start|center_vertical"
            android:paddingVertical="2dp"

            android:paddingStart="4dp"
            android:text="@string/createdBy"
            android:textColor="@color/white"
            android:textSize="10sp" />

        <TextView
            android:id="@+id/tv_amount"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:background="@drawable/linear_bg_white_mirror"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="start|center_vertical"
            android:paddingVertical="2dp"

            android:paddingStart="4dp"
            android:text="@string/amount"
            android:textSize="10sp" />

        <ImageView
            android:id="@+id/btn_delete_transaction"
            android:background="@color/discord_red"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.05"
            android:scaleType="fitCenter"
            android:src="@drawable/baseline_close_24"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>