<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/discord_darkgrey"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/linearLayout4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_day"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center_vertical"

                android:paddingStart="8dp"
                android:text="@string/day"
                android:textColor="@color/white"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/tv_total_day_expense_value"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.50"
                android:fontFamily="sans-serif-medium"
                android:gravity="end|center_vertical"

                android:paddingEnd="8dp"
                android:text="@string/moneyValue"
                android:textColor="@color/white"
                android:textSize="14sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/discord_yellow"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:background="@drawable/linear_bg"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center_vertical"
                android:paddingVertical="2dp"

                android:paddingStart="4dp"
                android:text="@string/kind"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:background="@drawable/linear_bg"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center_vertical"
                android:paddingVertical="2dp"

                android:paddingStart="4dp"
                android:text="@string/from"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:background="@drawable/linear_bg"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center_vertical"
                android:paddingVertical="2dp"

                android:paddingStart="4dp"
                android:text="@string/category"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.35"
                android:background="@drawable/linear_bg"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center_vertical"
                android:paddingVertical="2dp"

                android:paddingStart="4dp"
                android:text="@string/createdBy"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.15"
                android:background="@drawable/linear_bg"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center_vertical"
                android:paddingVertical="2dp"

                android:paddingStart="4dp"
                android:text="@string/amount"
                android:textColor="@color/black"
                android:textSize="12sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.05"
                android:background="@drawable/linear_bg_mirror"
                android:fontFamily="sans-serif-medium"
                android:gravity="start|center_vertical"
                android:paddingVertical="2dp"

                android:paddingStart="8dp"

                android:textColor="@color/black"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_transaction"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout4" />
</androidx.constraintlayout.widget.ConstraintLayout>