<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@color/discord_darkgrey"
    android:layout_height="match_parent"
    tools:context=".screen.walletManagement.WalletManagementActivity">

    <EditText
        android:id="@+id/et_wallet_name"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/search_bg"
        android:ems="10"

        android:hint="@string/walletname"
        android:inputType="textEmailAddress"

        android:paddingHorizontal="15dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/et_balance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/et_balance"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:background="@drawable/search_bg"
        android:ems="10"
        android:hint="@string/balance"

        android:inputType="textEmailAddress"
        android:paddingHorizontal="15dp"
        android:layout_marginBottom="10dp"
        android:paddingLeft="8dp"
        android:paddingEnd="8dp"
        app:layout_constraintBottom_toTopOf="@+id/btn_add_wallet"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btn_add_wallet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="60dp"
        app:cornerRadius="18dp"
        android:backgroundTint="@color/discord_blue"
        android:text="@string/addwallet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/total"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"

            />

        <TextView
            android:id="@+id/tv_total_balance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:text="@string/moneyValue"
            android:textColor="@color/white"
            android:textSize="16sp"

            />
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_wallet_management"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginBottom="2dp"
        app:layout_constraintBottom_toTopOf="@+id/et_wallet_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout6" />

    <ProgressBar
        android:id="@+id/progressBar4"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/et_wallet_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_wallet_management" />
</androidx.constraintlayout.widget.ConstraintLayout>