<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tv_balance"
    android:paddingHorizontal="20dp"
    android:layout_marginBottom="8dp"
    android:paddingVertical="20dp"
    android:layout_marginLeft="8dp"
    android:layout_marginRight="8dp"
    android:background="@drawable/card_bg"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_groupname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/contentLoading"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_groupbalance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:text="@string/contentLoading"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_member"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:scrollbars="vertical"
        android:scrollbarThumbVertical="@color/discord_blue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_groupname"
        app:layout_constraintVertical_bias="0.2" />

    <Button
        android:id="@+id/btn_leave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cornerRadius="20dp"
        android:backgroundTint="@color/discord_red"
        android:layout_marginTop="10dp"
        android:text="@string/leave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rv_member"
        app:layout_constraintTop_toBottomOf="@+id/tv_groupbalance" />

    <Button
        android:id="@+id/btn_entergroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/discord_green"
        android:text="@string/enter"
        app:cornerRadius="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/rv_member"
        app:layout_constraintTop_toBottomOf="@+id/btn_leave" />
</androidx.constraintlayout.widget.ConstraintLayout>